--- a/index.html
+++ b/index.html
@@ -6,9 +6,54 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
-  <link rel="stylesheet" href="assets/css/main.css">
+
+  <link rel="stylesheet" href="./assets/vendor/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/vendor/fontawesome/css/all.min.css" />
+  <link rel="stylesheet" href="./assets/vendor/node_modules/aos/dist/aos.css"></script>
+  <script src="./assets/vendor/node_modules/aos/dist/aos.js"></script>
+
+  <link rel="stylesheet" href="./assets/css/main.css">
 </head>
-<body>
-  
-</body>
+  <div class="d-flex w-100 __app-cover">
+
+  </div>
+  <div class="d-flex w-100 mt-auto __app-scripture-toolbar">
+    <!-- <div class="row form-group mx-auto">
+      <input type="text" name="" id="" placeholder="Scriptures" class="ml-auto form-control-sm my-auto">
+      <input type="text" name="" id="" placeholder="chapter" class="mx-2 form-control-sm my-auto">
+      <input type="text" name="" id="" placeholder="verses" class="mr-auto form-control-sm my-auto">
+    </div> -->
+  </div>
+
+  <div class="d-flex w-100 __app-scriptures-container">
+    <span class="d-flex __app-scriptures-book text-uppercase ml-5 mt-2">Romans</span>
+    <div class="d-flex __app-scriptures-items">
+
+    </div>
+  </div>
+
+  <script src="./assets/vendor/fontawesome/fontawesome-all.min.js"></script>
+  <script src="./assets/vendor/jquery/jquery-3.4.1.min.js"></script>
+  <script src="./assets/vendor/bootstrap/popper.min.js"></script>
+  <script src="./assets/vendor/bootstrap/bootstrap.min.js"></script>
+
+  <script>
+    const el = '.__app-scripture-toolbar';
+    const scripToolbar = document.querySelector(el);
+
+    $(function() {
+      $(window).scroll(function () {
+          if ($(this).scrollTop() > 50) {
+            // $('__app-scripture-toolbar').addClass('__grey');
+            scripToolbar.classList.add('__grey');
+            // console.log($(this).scrollTop());
+          }
+          if ($(this).scrollTop() < 50) {
+            scripToolbar.classList.remove('__grey');
+            // $('__app-scripture-toolbar').removeClass('__grey')
+          }
+      });
+    });
+  </script>
+</__app-scripture-toolbar>
 </html>
