bm: minor changes, scriptures player design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 
   <link rel="stylesheet" href="./assets/vendor/bootstrap/bootstrap.min.css">
+
   <link rel="stylesheet" href="../assets/vendor/fontawesome/css/all.min.css" />
+
   <link rel="stylesheet" href="./assets/vendor/node_modules/aos/dist/aos.css"></script>
   <script src="./assets/vendor/node_modules/aos/dist/aos.js"></script>
 
@@ -27,12 +29,18 @@
 
   <div class="d-flex w-100 __app-scriptures-container">
     <span class="d-flex __app-scriptures-book text-uppercase ml-5 mt-2">Romans</span>
-    <div class="d-flex __app-scriptures-items">
+    <div class="d-flex w-100 __app-scriptures-item">
 
     </div>
   </div>
 
-  <script src="./assets/vendor/fontawesome/fontawesome-all.min.js"></script>
+  <div class="d-flex __app-scriptures-player">
+    <i class="fa fa-fast-backward mx-auto mt-auto"></i>
+    <!-- <i class="fa fa-play fa-1x mx-auto my-4"></i> -->
+    <i class="fa fa-pause fa-1x mx-auto my-4"></i>
+    <i class="fa fa-fast-forward mb-auto mx-auto"></i>
+  </div>
+
   <script src="./assets/vendor/jquery/jquery-3.4.1.min.js"></script>
   <script src="./assets/vendor/bootstrap/popper.min.js"></script>
   <script src="./assets/vendor/bootstrap/bootstrap.min.js"></script>
