--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
   </div>
 
   <div class="d-flex w-100 __app-scriptures-container">
-    <span class="d-flex __app-scriptures-book text-uppercase ml-5 mt-2">Romans</span>
+    <span class="d-flex __app-scriptures-book text-uppercase ml-5 mt-2"><p class="my-0 ml-0 mr-2 text-capitalize">The book of</p>Romans</span>
     <div class="d-flex w-100 __app-scriptures-item">
-
+      <span class="text-left">The earth is the Lord's and its fulness thereof...</span>
+      <div class="d-flex ml-auto my-2">
+        <i class="far fa-heart ml-auto mr-2 my-auto"></i>
+        <i class="far fa-smile-wink mr-2  my-auto"></i>
+        <i class="fa fa-share-alt mr-2  my-auto"></i>
+      </div>
     </div>
   </div>
 
