bm: inserted search icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
   <div class="d-flex w-100 __app-cover">
-
+    <i class="fa fa-search ml-auto mr-4 mt-4 mb-auto fa-1x"></i>
   </div>
   <div class="d-flex w-100 mt-auto __app-scripture-toolbar">
     <!-- <div class="row form-group mx-auto">
