--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div class="d-flex w-100 __app-cover">
     <i class="fa fa-search ml-auto mr-4 mt-4 mb-auto fa-1x"></i>
   </div>
+
   <div class="d-flex w-100 mt-auto __app-scripture-toolbar">
     <!-- <div class="row form-group mx-auto">
       <input type="text" name="" id="" placeholder="Scriptures" class="ml-auto form-control-sm my-auto">
@@ -28,7 +29,7 @@
   </div>
 
   <div class="d-flex w-100 __app-scriptures-container">
-    <span class="d-flex __app-scriptures-book text-uppercase ml-5 mt-2"><p class="my-0 ml-0 mr-2 text-capitalize">The book of</p>Romans</span>
+    <span class="d-flex __app-scriptures-book text-uppercase mt-2"><p class="my-0 ml-0 mr-2 text-capitalize">The book of</p>Romans</span>
     <div class="d-flex w-100 __app-scriptures-item">
       <span class="text-left">The earth is the Lord's and its fulness thereof...</span>
       <div class="d-flex ml-auto my-2">
