bm: git object corruption

--- a/index.html
+++ b/index.html
@@ -28,19 +28,26 @@
     </div> -->
   </div>
 
+  <!-- <div class="d-flex __app-scripture-search-pane"></div> -->
+
   <div class="d-flex w-100 __app-scriptures-container">
-    <span class="d-flex __app-scriptures-book text-uppercase mt-3"><p class="my-0 ml-0 mr-2 text-capitalize">The book of</p>Romans</span>
+    <span class="d-flex __app-scriptures-book text-uppercase mt-3">
+      <p class="my-0 ml-0 mr-2 text-capitalize">The book of</p>
+      Romans
+    </span>
 
     <div class="d-flex w-100 __app-scriptures-item">
       <div class="text-left w-100 form-inline"><p class="my-0 mr-2 mb-2 font-weight-bold">1</p>The earth is the Lord's and its fulness thereof...</div>
       <div class="d-flex ml-auto my-2">
-        <i class="far fa-heart ml-auto mr-2 my-auto"></i>
-        <i class="far fa-smile-wink mr-2  my-auto"></i>
-        <i class="fa fa-share-alt mr-2  my-auto"></i>
+        <i class="fa fa-play ml-auto mr-3 my-auto"></i>
+        <i class="far fa-bell mr-3 my-auto"></i>
+        <i class="far fa-heart mr-3 my-auto"></i>
+        <i class="far fa-smile-wink mr-3 my-auto"></i>
+        <i class="fa fa-share-alt mr-3 my-auto"></i>
       </div>
     </div>
 
-  <div class="d-flex __app-scriptures-player">
+  <div class="d-flex __app-scriptures-player __player-position-left">
     <i class="fa fa-fast-backward mx-auto mt-auto"></i>
     <!-- <i class="fa fa-play fa-1x mx-auto my-4"></i> -->
     <i class="fa fa-pause fa-1x mx-auto my-4"></i>
@@ -69,5 +76,4 @@
       });
     });
   </script>
-</__app-scripture-toolbar>
 </html>
