bm: minor changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="./assets/vendor/bootstrap/bootstrap.min.css">
 
-  <link rel="stylesheet" href="../assets/vendor/fontawesome/css/all.min.css" />
+  <link rel="stylesheet" href="./assets/vendor/fontawesome/css/all.min.css" />
 
   <link rel="stylesheet" href="./assets/vendor/node_modules/aos/dist/aos.css"></script>
   <script src="./assets/vendor/node_modules/aos/dist/aos.js"></script>
@@ -75,5 +75,7 @@
           }
       });
     });
+
+    AOS.init();
   </script>
 </html>
