bm: result and result mock, with overflow-y on parent

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Goshen</title>
 
 
   <link rel="stylesheet" href="./assets/vendor/bootstrap/bootstrap.min.css">
@@ -28,7 +28,17 @@
     </div> -->
   </div>
 
-  <!-- <div class="d-flex __app-scripture-search-pane"></div> -->
+  <div class="d-flex __app-scripture-search-pane">
+    <div class="d-flex w-100 mb-2 __app--scripture__result--item px-3">
+      <span class="my-1 mr-auto font-weight-bold __app--scripture__result--item__reference">Genesis 1:1</span>
+      <span class="w-100 d-block text-truncate __app--scripture__result--item__passage">In the beginning, God created the heaven and the earth</span>
+    </div>
+
+    <div class="d-flex w-100 __app--scripture__result--item __app--scripture__result--item--mock px-3">
+      <span class="mt-1 mb-2 mr-auto font-weight-bold __app--scripture__result--item__reference--mock"></span>
+      <span class="w-100 d-block text-truncate __app--scripture__result--item__passage--mock"></span>
+    </div>
+  </div>
 
   <div class="d-flex w-100 __app-scriptures-container">
     <span class="d-flex __app-scriptures-book text-uppercase mt-3">
