bm: added search results header

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   </div>
 
   <div class="d-flex __app-scripture-search-pane">
+    <span class="d-flex w-100 my-1 ml-3 mr-auto __app--scripture__result--header"> search results </span>
+
     <div class="d-flex w-100 mb-2 __app--scripture__result--item px-3">
       <span class="my-1 mr-auto font-weight-bold __app--scripture__result--item__reference">Genesis 1:1</span>
       <span class="w-100 d-block text-truncate __app--scripture__result--item__passage">In the beginning, God created the heaven and the earth</span>
